# solana-playground

./: README.md
fund_management_program/: Anchor.toml  Cargo.toml
fund_management_program/app/cli_client/: Cargo.toml
fund_management_program/app/cli_client/src/: lib.rs  main.rs
fund_management_program/app/fund_management_client/: Cargo.toml
fund_management_program/app/fund_management_client/src/: lib.rs  main.rs
fund_management_program/app/fund_management_client/src/model/: mod.rs  pubkey_cli.rs
fund_management_program/programs/fund_management_program/: Cargo.toml
fund_management_program/programs/fund_management_program/src/: errors.rs  lib.rs
fund_management_program/programs/fund_management_program/src/instructions/: administrator.rs  initialize.rs  investor.rs  mod.rs  portfolio_manager.rs
fund_management_program/programs/fund_management_program/src/state/: fund.rs  mod.rs
fund_management_program/tests/: fund_management_program.ts
hello_world_client/: Cargo.toml
hello_world_client/src/: main.rs
hello_world_program/: Cargo.toml
hello_world_program/src/: lib.rs
