[package]
name = "fund_management_cli_client"
version = "0.1.0"
edition = "2021"
authors = ["Serge FARNY <serge.farny@gmail.com>"]

[dependencies]
anchor-client = "0.29.0"
solana-sdk = "1.16.14"
borsh = { version ="1.3.0", features = ["derive"] }
anyhow = "1.0.32"
fund_management_program = { path = "../../programs/fund_management_program", features = ["no-entrypoint"] }
