[package]
name = "fund_management_client"
version = "0.1.0"
edition = "2021"
authors = ["Serge FARNY <serge.farny@gmail.com>"]

[dependencies]
anchor-client = "0.29.0"
solana-sdk = "1.16.14"
borsh = { version = "0.10.3", features = ["const-generics"] }
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango", features = ["serde", "borsh", "debug-assert-in-release"]}
clap = { version = "4.4.18" , features = ["derive"]}
anyhow = "1.0.32"
fund_management_program = { path = "../../programs/fund_management_program", features = ["no-entrypoint"] }
