[package]
name = "fund_management_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fund_management_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango", features = ["serde", "borsh", "debug-assert-in-release"]}
borsh = { version = "0.10.3", features = ["const-generics"] }

# fix build
ahash = "=0.8.6"
half = { version = "=1.8.2" }
